--- a/ntsimulator/docker-compose.yaml
+++ b/ntsimulator/docker-compose.yaml
@@ -1,14 +1,13 @@
-version: '3.7'
 services:
   ntsim-ng:
     image: "${DOCKER_REPO}nts-ng-manager:${NTS_BUILD_VERSION}"
     container_name: nts-ng-manager
     stop_grace_period: 5m
     ports:
-     - "::${NTS_MANAGER_PORT}:830"
+      - "[::]:${NTS_MANAGER_PORT}:830"
     volumes:
-     - "/var/run/docker.sock:/var/run/docker.sock"
-     - "/usr/bin/docker:/usr/bin/docker"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "/usr/bin/docker:/usr/bin/docker"
     environment:
       NTS_HOST_IP: "10.20.11.136"
       NTS_HOST_BASE_PORT: 50000
@@ -16,30 +15,26 @@ services:
       NTS_HOST_NETCONF_TLS_BASE_PORT: 1000
       NTS_HOST_TRANSFER_FTP_BASE_PORT: 2000
       NTS_HOST_TRANSFER_SFTP_BASE_PORT: 2000
-
       DOCKER_ENGINE_VERSION: "1.40"
-      IPv6_ENABLED: ${IPv6_ENABLED}
-      SSH_CONNECTIONS: ${SSH_CONNECTIONS}
-      TLS_CONNECTIONS: ${TLS_CONNECTIONS}
-
-      SDN_CONTROLLER_PROTOCOL: ${SDN_CONTROLLER_PROTOCOL}
-      SDN_CONTROLLER_IP: ${SDN_CONTROLLER_IP}
-      SDN_CONTROLLER_PORT: ${SDN_CONTROLLER_PORT}
-      SDN_CONTROLLER_CALLHOME_IP: ${SDN_CONTROLLER_CALLHOME_IP}
-      SDN_CONTROLLER_CALLHOME_PORT: ${SDN_CONTROLLER_CALLHOME_PORT}
-      SDN_CONTROLLER_USERNAME: ${SDN_CONTROLLER_USERNAME}
-      SDN_CONTROLLER_PASSWORD: ${SDN_CONTROLLER_PASSWORD}
-
-      VES_COMMON_HEADER_VERSION: ${VES_COMMON_HEADER_VERSION}
-      VES_ENDPOINT_PROTOCOL: ${VES_ENDPOINT_PROTOCOL}
-      VES_ENDPOINT_IP: ${VES_ENDPOINT_IP}
-      VES_ENDPOINT_PORT: ${VES_ENDPOINT_PORT}
-      VES_ENDPOINT_AUTH_METHOD: ${VES_ENDPOINT_AUTH_METHOD}
-      VES_ENDPOINT_USERNAME: ${VES_ENDPOINT_USERNAME}
-      VES_ENDPOINT_PASSWORD: ${VES_ENDPOINT_PASSWORD}
-
-      CURL_CONNECT_TIMEOUT: ${CURL_CONNECT_TIMEOUT}
-      CURL_OPERATION_TIMEOUT: ${CURL_OPERATION_TIMEOUT}
+      IPv6_ENABLED: "${IPv6_ENABLED}"
+      SSH_CONNECTIONS: "${SSH_CONNECTIONS}"
+      TLS_CONNECTIONS: "${TLS_CONNECTIONS}"
+      SDN_CONTROLLER_PROTOCOL: "${SDN_CONTROLLER_PROTOCOL}"
+      SDN_CONTROLLER_IP: "${SDN_CONTROLLER_IP}"
+      SDN_CONTROLLER_PORT: "${SDN_CONTROLLER_PORT}"
+      SDN_CONTROLLER_CALLHOME_IP: "${SDN_CONTROLLER_CALLHOME_IP}"
+      SDN_CONTROLLER_CALLHOME_PORT: "${SDN_CONTROLLER_CALLHOME_PORT}"
+      SDN_CONTROLLER_USERNAME: "${SDN_CONTROLLER_USERNAME}"
+      SDN_CONTROLLER_PASSWORD: "${SDN_CONTROLLER_PASSWORD}"
+      VES_COMMON_HEADER_VERSION: "${VES_COMMON_HEADER_VERSION}"
+      VES_ENDPOINT_PROTOCOL: "${VES_ENDPOINT_PROTOCOL}"
+      VES_ENDPOINT_IP: "${VES_ENDPOINT_IP}"
+      VES_ENDPOINT_PORT: "${VES_ENDPOINT_PORT}"
+      VES_ENDPOINT_AUTH_METHOD: "${VES_ENDPOINT_AUTH_METHOD}"
+      VES_ENDPOINT_USERNAME: "${VES_ENDPOINT_USERNAME}"
+      VES_ENDPOINT_PASSWORD: "${VES_ENDPOINT_PASSWORD}"
+      CURL_CONNECT_TIMEOUT: "${CURL_CONNECT_TIMEOUT}"
+      CURL_OPERATION_TIMEOUT: "${CURL_OPERATION_TIMEOUT}"
 
   ntsim-ng-o-ru:
     image: "${DOCKER_REPO}nts-ng-o-ran-ru-fh:${NTS_BUILD_VERSION}"
@@ -49,94 +44,84 @@ services:
     stop_grace_period: 5m
     hostname: "O-RAN-O-RU-1"
     ports:
-     - ":::18300:830"
+      - "[::]:18300:830"
     environment:
-      IPv6_ENABLED: ${IPv6_ENABLED}
-      SSH_CONNECTIONS: ${SSH_CONNECTIONS}
-      TLS_CONNECTIONS: ${TLS_CONNECTIONS}
-      NTS_NF_STANDALONE_START_FEATURES: ${NTS_NF_STANDALONE_START_FEATURES}
-      NTS_NF_MOUNT_POINT_ADDRESSING_METHOD: ${NTS_NF_MOUNT_POINT_ADDRESSING_METHOD}
-
-      NTS_HOST_IP: ${NTS_HOST_IP}
-      NTS_HOST_BASE_PORT: ${NTS_HOST_BASE_PORT}
-      NTS_HOST_NETCONF_SSH_BASE_PORT: ${NTS_HOST_NETCONF_SSH_BASE_PORT}
-      NTS_HOST_NETCONF_TLS_BASE_PORT: ${NTS_HOST_NETCONF_TLS_BASE_PORT}
-      NTS_HOST_TRANSFER_FTP_BASE_PORT: ${NTS_HOST_TRANSFER_FTP_BASE_PORT}
-      NTS_HOST_TRANSFER_SFTP_BASE_PORT: ${NTS_HOST_TRANSFER_SFTP_BASE_PORT}
-
-      SDN_CONTROLLER_PROTOCOL: ${SDN_CONTROLLER_PROTOCOL}
-      SDN_CONTROLLER_IP: ${SDN_CONTROLLER_IP}
-      SDN_CONTROLLER_PORT: ${SDN_CONTROLLER_PORT}
-      SDN_CONTROLLER_CALLHOME_IP: ${SDN_CONTROLLER_CALLHOME_IP}
-      SDN_CONTROLLER_CALLHOME_PORT: ${SDN_CONTROLLER_CALLHOME_PORT}
-      SDN_CONTROLLER_USERNAME: ${SDN_CONTROLLER_USERNAME}
-      SDN_CONTROLLER_PASSWORD: ${SDN_CONTROLLER_PASSWORD}
-
-      VES_COMMON_HEADER_VERSION: ${VES_COMMON_HEADER_VERSION}
-      VES_ENDPOINT_PROTOCOL: ${VES_ENDPOINT_PROTOCOL}
-      VES_ENDPOINT_IP: ${VES_ENDPOINT_IP}
-      VES_ENDPOINT_PORT: ${VES_ENDPOINT_PORT}
-      VES_ENDPOINT_AUTH_METHOD: ${VES_ENDPOINT_AUTH_METHOD}
-      VES_ENDPOINT_USERNAME: ${VES_ENDPOINT_USERNAME}
-      VES_ENDPOINT_PASSWORD: ${VES_ENDPOINT_PASSWORD}
-
-      CURL_CONNECT_TIMEOUT: ${CURL_CONNECT_TIMEOUT}
-      CURL_OPERATION_TIMEOUT: ${CURL_OPERATION_TIMEOUT}
+      IPv6_ENABLED: "${IPv6_ENABLED}"
+      SSH_CONNECTIONS: "${SSH_CONNECTIONS}"
+      TLS_CONNECTIONS: "${TLS_CONNECTIONS}"
+      NTS_NF_STANDALONE_START_FEATURES: "${NTS_NF_STANDALONE_START_FEATURES}"
+      NTS_NF_MOUNT_POINT_ADDRESSING_METHOD: "${NTS_NF_MOUNT_POINT_ADDRESSING_METHOD}"
+      NTS_HOST_IP: "${NTS_HOST_IP}"
+      NTS_HOST_BASE_PORT: "${NTS_HOST_BASE_PORT}"
+      NTS_HOST_NETCONF_SSH_BASE_PORT: "${NTS_HOST_NETCONF_SSH_BASE_PORT}"
+      NTS_HOST_NETCONF_TLS_BASE_PORT: "${NTS_HOST_NETCONF_TLS_BASE_PORT}"
+      NTS_HOST_TRANSFER_FTP_BASE_PORT: "${NTS_HOST_TRANSFER_FTP_BASE_PORT}"
+      NTS_HOST_TRANSFER_SFTP_BASE_PORT: "${NTS_HOST_TRANSFER_SFTP_BASE_PORT}"
+      SDN_CONTROLLER_PROTOCOL: "${SDN_CONTROLLER_PROTOCOL}"
+      SDN_CONTROLLER_IP: "${SDN_CONTROLLER_IP}"
+      SDN_CONTROLLER_PORT: "${SDN_CONTROLLER_PORT}"
+      SDN_CONTROLLER_CALLHOME_IP: "${SDN_CONTROLLER_CALLHOME_IP}"
+      SDN_CONTROLLER_CALLHOME_PORT: "${SDN_CONTROLLER_CALLHOME_PORT}"
+      SDN_CONTROLLER_USERNAME: "${SDN_CONTROLLER_USERNAME}"
+      SDN_CONTROLLER_PASSWORD: "${SDN_CONTROLLER_PASSWORD}"
+      VES_COMMON_HEADER_VERSION: "${VES_COMMON_HEADER_VERSION}"
+      VES_ENDPOINT_PROTOCOL: "${VES_ENDPOINT_PROTOCOL}"
+      VES_ENDPOINT_IP: "${VES_ENDPOINT_IP}"
+      VES_ENDPOINT_PORT: "${VES_ENDPOINT_PORT}"
+      VES_ENDPOINT_AUTH_METHOD: "${VES_ENDPOINT_AUTH_METHOD}"
+      VES_ENDPOINT_USERNAME: "${VES_ENDPOINT_USERNAME}"
+      VES_ENDPOINT_PASSWORD: "${VES_ENDPOINT_PASSWORD}"
+      CURL_CONNECT_TIMEOUT: "${CURL_CONNECT_TIMEOUT}"
+      CURL_OPERATION_TIMEOUT: "${CURL_OPERATION_TIMEOUT}"
 
   ntsim-ng-o-du:
-    image: "${DOCKER_REPO}nts-ng-o-ran-du:${NTS_BUILD_VERSION}"
+    image: "${DOCKER_REPO}nts-ng-o-ran-du-rel-18:${NTS_BUILD_VERSION}"
     cap_add:
       - SYS_ADMIN
       - NET_ADMIN
     stop_grace_period: 5m
     hostname: "O-RAN-O-DU-1"
     ports:
-     - ":::18301:830"
+      - "[::]:18301:830"
     environment:
-      IPv6_ENABLED: ${IPv6_ENABLED}
-      SSH_CONNECTIONS: ${SSH_CONNECTIONS}
-      TLS_CONNECTIONS: ${TLS_CONNECTIONS}
-      NTS_NF_STANDALONE_START_FEATURES: ${NTS_NF_STANDALONE_START_FEATURES}
-      NTS_NF_MOUNT_POINT_ADDRESSING_METHOD: ${NTS_NF_MOUNT_POINT_ADDRESSING_METHOD}
-
-      NTS_HOST_IP: ${NTS_HOST_IP}
-      NTS_HOST_BASE_PORT: ${NTS_HOST_BASE_PORT}
-      NTS_HOST_NETCONF_SSH_BASE_PORT: ${NTS_HOST_NETCONF_SSH_BASE_PORT}
-      NTS_HOST_NETCONF_TLS_BASE_PORT: ${NTS_HOST_NETCONF_TLS_BASE_PORT}
-      NTS_HOST_TRANSFER_FTP_BASE_PORT: ${NTS_HOST_TRANSFER_FTP_BASE_PORT}
-      NTS_HOST_TRANSFER_SFTP_BASE_PORT: ${NTS_HOST_TRANSFER_SFTP_BASE_PORT}
-
-      SDN_CONTROLLER_PROTOCOL: ${SDN_CONTROLLER_PROTOCOL}
-      SDN_CONTROLLER_IP: ${SDN_CONTROLLER_IP}
-      SDN_CONTROLLER_PORT: ${SDN_CONTROLLER_PORT}
-      SDN_CONTROLLER_CALLHOME_IP: ${SDN_CONTROLLER_CALLHOME_IP}
-      SDN_CONTROLLER_CALLHOME_PORT: ${SDN_CONTROLLER_CALLHOME_PORT}
-      SDN_CONTROLLER_USERNAME: ${SDN_CONTROLLER_USERNAME}
-      SDN_CONTROLLER_PASSWORD: ${SDN_CONTROLLER_PASSWORD}
-
-      VES_COMMON_HEADER_VERSION: ${VES_COMMON_HEADER_VERSION}
-      VES_ENDPOINT_PROTOCOL: ${VES_ENDPOINT_PROTOCOL}
-      VES_ENDPOINT_IP: ${VES_ENDPOINT_IP}
-      VES_ENDPOINT_PORT: ${VES_ENDPOINT_PORT}
-      VES_ENDPOINT_AUTH_METHOD: ${VES_ENDPOINT_AUTH_METHOD}
-      VES_ENDPOINT_USERNAME: ${VES_ENDPOINT_USERNAME}
-      VES_ENDPOINT_PASSWORD: ${VES_ENDPOINT_PASSWORD}
-
-      CURL_CONNECT_TIMEOUT: ${CURL_CONNECT_TIMEOUT}
-      CURL_OPERATION_TIMEOUT: ${CURL_OPERATION_TIMEOUT}
+      IPv6_ENABLED: "${IPv6_ENABLED}"
+      SSH_CONNECTIONS: "${SSH_CONNECTIONS}"
+      TLS_CONNECTIONS: "${TLS_CONNECTIONS}"
+      NTS_NF_STANDALONE_START_FEATURES: "${NTS_NF_STANDALONE_START_FEATURES}"
+      NTS_NF_MOUNT_POINT_ADDRESSING_METHOD: "${NTS_NF_MOUNT_POINT_ADDRESSING_METHOD}"
+      NTS_HOST_IP: "${NTS_HOST_IP}"
+      NTS_HOST_BASE_PORT: "${NTS_HOST_BASE_PORT}"
+      NTS_HOST_NETCONF_SSH_BASE_PORT: "${NTS_HOST_NETCONF_SSH_BASE_PORT}"
+      NTS_HOST_NETCONF_TLS_BASE_PORT: "${NTS_HOST_NETCONF_TLS_BASE_PORT}"
+      NTS_HOST_TRANSFER_FTP_BASE_PORT: "${NTS_HOST_TRANSFER_FTP_BASE_PORT}"
+      NTS_HOST_TRANSFER_SFTP_BASE_PORT: "${NTS_HOST_TRANSFER_SFTP_BASE_PORT}"
+      SDN_CONTROLLER_PROTOCOL: "${SDN_CONTROLLER_PROTOCOL}"
+      SDN_CONTROLLER_IP: "${SDN_CONTROLLER_IP}"
+      SDN_CONTROLLER_PORT: "${SDN_CONTROLLER_PORT}"
+      SDN_CONTROLLER_CALLHOME_IP: "${SDN_CONTROLLER_CALLHOME_IP}"
+      SDN_CONTROLLER_CALLHOME_PORT: "${SDN_CONTROLLER_CALLHOME_PORT}"
+      SDN_CONTROLLER_USERNAME: "${SDN_CONTROLLER_USERNAME}"
+      SDN_CONTROLLER_PASSWORD: "${SDN_CONTROLLER_PASSWORD}"
+      VES_COMMON_HEADER_VERSION: "${VES_COMMON_HEADER_VERSION}"
+      VES_ENDPOINT_PROTOCOL: "${VES_ENDPOINT_PROTOCOL}"
+      VES_ENDPOINT_IP: "${VES_ENDPOINT_IP}"
+      VES_ENDPOINT_PORT: "${VES_ENDPOINT_PORT}"
+      VES_ENDPOINT_AUTH_METHOD: "${VES_ENDPOINT_AUTH_METHOD}"
+      VES_ENDPOINT_USERNAME: "${VES_ENDPOINT_USERNAME}"
+      VES_ENDPOINT_PASSWORD: "${VES_ENDPOINT_PASSWORD}"
+      CURL_CONNECT_TIMEOUT: "${CURL_CONNECT_TIMEOUT}"
+      CURL_OPERATION_TIMEOUT: "${CURL_OPERATION_TIMEOUT}"
 
   o-ran-sc-topology-service:
     image: "${DOCKER_REPO}o-ran-sc-topology-service:${NTS_BUILD_VERSION}"
     stop_grace_period: 5m
     hostname: "o-ran-sc-topology-service"
     ports:
-      - ":::58181:8181"
+      - "[::]:58181:8181"
     volumes:
-        - ./deploy/smo-nts-ng-topology-server/data/tapi-common-operational.json:/opt/dev/deploy/data/tapi-common-operational.json
-        - ./deploy/smo-nts-ng-topology-server/data/tapi-common-running.json:/opt/dev/deploy/data/tapi-common-running.json
+      - ./deploy/smo-nts-ng-topology-server/data/tapi-common-operational.json:/opt/dev/deploy/data/tapi-common-operational.json
+      - ./deploy/smo-nts-ng-topology-server/data/tapi-common-running.json:/opt/dev/deploy/data/tapi-common-running.json
 
-# We can attach to any other docker network, like in the example below
 networks:
   default:
-    external:
-      name: smo_integration
+    name: smo_integration
